[package]
name = "fomowelll"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0" 
ic-stable-structures = "0.6.7"
base64 = "0.22.1"
candid = "0.10"
ic-cdk-macros = "0.17.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bitcoin = "0.32.5"
hex = "0.4.3"
